--- a/package.json
+++ b/package.json
@@ -1,11 +1,19 @@
 {
-  "scripts":{
+  "scripts": {
+    "test": "jest",
     "lint": "eslint .",
     "lint fix": "eslint . --fix"
   },
   "devDependencies": {
     "@eslint/js": "^9.38.0",
+    "@types/jest": "^30.0.0",
     "eslint": "^9.38.0",
-    "globals": "^16.4.0"
+    "globals": "^16.4.0",
+    "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0"
+  },
+  "jest":{
+    "setupFiles": ["<rootDir>/setup.js"],
+    "testEnvironment": "jest-environment-jsdom"
   }
 }
